# outheis-minimal

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  config.example.json  pyproject.toml
.github/workflows/: pages.yml  ssh-debug.yml  test.yml
design/: 02-systems-survey.md  03-architecture.md  04-data-formats.md  05-related-work.md
dev/: IMPLEMENTATION.md
docs/: CREDENTIALS.md  README.md  cli.md  configuration.md  index.html  index.md
docs/design/: 01-why-os-principles.md  05-related-work.md  06-agent-prompts.md  index.md
docs/implementation/: architecture.md  index.md  memory.md
docs/internals/: agents.md  dispatcher.md  queue.md
docs/philosophy/: index.md
fixtures/vault/Agenda/: Daily.md  Exchange.md  Inbox.md
fixtures/vault/notes/: mobile-sync-research.md  reading-list.md
fixtures/vault/projects/: alpha.md
fixtures/vault/references/: api-auth.md
scripts/: build-site.py
src/outheis/: __init__.py  __main__.py
src/outheis/agents/: __init__.py  action.py  agenda.py  base.py  data.py  loader.py  pattern.py  relay.py
src/outheis/agents/rules/: action.md  agenda.md  common.md  data.md  pattern.md  relay.md
src/outheis/agents/tasks/: __init__.py  base.py  news.py  registry.py
src/outheis/cli/: __init__.py  main.py
src/outheis/core/: __init__.py  config.py  index.py  llm.py  memory.py  message.py  queue.py  schema.py  vault.py
src/outheis/dispatcher/: __init__.py  daemon.py  lifecycle.py  lock.py  router.py  watcher.py
src/outheis/transport/: __init__.py  base.py  cli.py  signal.py  signal_rpc.py
src/outheis/vault/: __init__.py  reader.py
tests/: __init__.py  test_data_agent.py  test_index.py  test_integration.py  test_message.py  test_queue.py  test_router.py  test_schema.py
tests/fixtures/vault/: .index.jsonl
tests/fixtures/vault/family/: family.md  kids.md
tests/fixtures/vault/health/: medical.md  running.md
tests/fixtures/vault/personal/: finances.md  hobbies.md  home.md  travel.md
theory/: temporalization-of-order.md
web/: _config.yml  index.md
web/_layouts/: default.html
web/architecture/: index.md
web/design/: 01-why-os-principles.md  02-systems-survey.md  03-architecture.md  04-data-formats.md  05-related-work.md  06-agent-prompts.md  index.md
web/guide/: index.md
web/implementation/: guide.md  index.md
web/memory/: index.md
web/philosophy/: index.md
web/theory/: index.md
(+1 files in other folders)
